View Issue Details
ID | Project | Category | View Status | Date Submitted | Last Update |
---|---|---|---|---|---|
0030680 | Community | OCCT:VIS | public | 2019-04-29 05:38 | 2019-05-26 10:48 |
Reporter | hwliu11 | Assigned To | bugmaster | ||
Priority | normal | Severity | major | ||
Status | closed | Resolution | fixed | ||
Platform | Windows | OS | Windows 10 | ||
Product Version | 6.8.0 | ||||
Target Version | 7.4.0 | Fixed in Version | 7.4.0 | ||
Summary | 0030680: VIS - IVtkOCC_ShapeMesher displays Isoline wrong | ||||
Description | IVTK display the shape,get wrong ios line | ||||
Steps To Reproduce | pload ALL restore output.brep a ivtkinit ivtkdisplay a ivit vdisplay a | ||||
Tags | No tags attached. | ||||
Test case number | Not required | ||||
|
output.brep (804,041 bytes) |
|
a.PNG (24,001 bytes) |
|
It seems in file IVtkOCC_ShapeMesher.cxx line 491, if (anU2 > anU1 && anU1 < anU2) is wrong may be if (anU2 > theU1 && anU1 < theU2) |
|
Branch CR30680 has been created by kgv. SHA-1: a19c37e41ea1a0138a41be9a16f21cb737f062fc Detailed log of new commits: Author: kgv Date: Sun May 19 15:57:54 2019 +0300 0030680: VIS - IVtkOCC_ShapeMesher displays Isoline wrong IVtkOCC_ShapeMesher now calls StdPrs_Isolines tool instead of code copy-paste. |
|
Patch is ready for review. http://jenkins-test-12.nnov.opencascade.com:8080/view/CR30680-master-KGV/ |
|
Reviewed without remarks |
|
Combination - OCCT branch : CR30680 master SHA - a19c37e41ea1a0138a41be9a16f21cb737f062fc d67d4b811012eef8913d3c535c29654d0acf3c4c Products branch : master SHA - 986f3b05d4ac9538c920d339cc6c45c66f97af3b was compiled on Linux, MacOS and Windows platforms and tested in optimize mode. Number of compiler warnings: No new/fixed warnings Regressions/Differences/Improvements: No regressions/differences CPU differences: Debian80-64: OCCT Total CPU difference: 16338.660000000036 / 16353.149999999998 [-0.09%] Products Total CPU difference: 10511.380000000048 / 10547.03000000006 [-0.34%] Windows-64-VC14: OCCT Total CPU difference: 17728.34375 / 17737.640625 [-0.05%] Products Total CPU difference: 12135.890625 / 12094.59375 [+0.34%] Image differences : No differences that require special attention Memory differences : No differences that require special attention |
|
Branch CR30680 has been deleted by inv. SHA-1: a19c37e41ea1a0138a41be9a16f21cb737f062fc |
occt: master 98eb4489 2019-05-19 12:57:54 Committer: bugmaster Details Diff |
0030680: VIS - IVtkOCC_ShapeMesher displays Isoline wrong IVtkOCC_ShapeMesher now calls StdPrs_Isolines tool instead of code copy-paste. |
Affected Issues 0030680 |
|
mod - src/IVtkOCC/IVtkOCC_ShapeMesher.cxx | Diff File | ||
mod - src/IVtkOCC/IVtkOCC_ShapeMesher.hxx | Diff File |
Date Modified | Username | Field | Change |
---|---|---|---|
2019-04-29 05:38 | hwliu11 | New Issue | |
2019-04-29 05:38 | hwliu11 | Assigned To | => san |
2019-04-29 05:38 | hwliu11 | File Added: output.brep | |
2019-04-29 05:44 | hwliu11 | File Added: a.PNG | |
2019-05-08 11:47 | hwliu11 | Note Added: 0084238 | |
2019-05-09 05:51 | hwliu11 | Assigned To | san => aba |
2019-05-19 16:04 | kgv | Summary | IVTK display ios line wrong => VIS - IVTK display ios line wrong |
2019-05-19 16:04 | kgv | Summary | VIS - IVTK display ios line wrong => VIS - IVtkOCC_ShapeMesher display ios line wrong |
2019-05-19 16:08 | kgv | Summary | VIS - IVtkOCC_ShapeMesher display ios line wrong => VIS - IVtkOCC_ShapeMesher displays Isoline wrong |
2019-05-19 16:10 | git | Note Added: 0084464 | |
2019-05-19 16:25 | kgv | Target Version | => 7.4.0 |
2019-05-19 16:26 | kgv | Relationship added | child of 0024904 |
2019-05-19 16:28 | kgv | Product Version | 7.3.0 => 6.8.0 |
2019-05-19 18:17 | kgv | Note Added: 0084466 | |
2019-05-19 18:17 | kgv | Assigned To | aba => osa |
2019-05-19 18:17 | kgv | Status | new => resolved |
2019-05-21 12:16 | osa | Note Added: 0084499 | |
2019-05-21 12:16 | osa | Assigned To | osa => bugmaster |
2019-05-21 12:16 | osa | Status | resolved => reviewed |
2019-05-21 18:57 | bugmaster | Test case number | => Not required |
2019-05-21 18:57 | bugmaster | Note Added: 0084521 | |
2019-05-21 18:57 | bugmaster | Status | reviewed => tested |
2019-05-25 19:58 | bugmaster | Changeset attached | => occt master 98eb4489 |
2019-05-25 19:58 | bugmaster | Status | tested => verified |
2019-05-25 19:58 | bugmaster | Resolution | open => fixed |
2019-05-26 10:48 | git | Note Added: 0084632 |