0030680: VIS - IVtkOCC_ShapeMesher displays Isoline wrong

IVtkOCC_ShapeMesher now calls StdPrs_Isolines tool instead of code copy-paste.